Java reformatting & inspections